  nanogetstr()
	- Remove unnecessary reset of x since it is now handled
	  elsewhere (David Lawrence Ramsey).
  statusq()
	- Always blank the statusbar on exit (David Benbennick).
- nano.1, nano.1.html:
	- Add initialization file comments, change some options from 
	  bracketed to underlined to emphasize that they are not 
	  optional.
	- Add SEE ALSO section (Jordi).
- nanorc.5:
	- Add nanorc manpage, with descriptions of all available commands
	  (Jordi).
- nanorc.sample:
	- Make nanorc entry less tolerant of invalid colors.
- nano.spec.in:
	- Change default flags to --enable-all.
- THANKS:
	- Add Kalle Kivimaa and Kalle Olavi Niemitalo, for Finnish (Jordi).

GNU nano 1.1.99pre2 - 2003.02.03
- General:
	- Changed some translatable debug messages to use %s 
	  instead of the function name, and removed gettext from 
	  two strings that had no actual words in them that
	  should be translated.	 Suggested originally by
	  Christian Rose.
	- Fix subexpression replacement to work consistently.
	  Affects search.c:replace_regexp() and 
	  utils.c:strstrwrapper() (David Benbennick).
	- Fix cursor position being saved when escaping out 
	  of nanogetstr with keys like ^Y and ^V.  New arg
	  resetpos to nanogetstr(), added static int
	  resetpos in statusq() (bug found by DLR).
	- Fix constant curos updates from obliterating other
	  system messages, and fix statusbar message length.
	  Affects files.c:load_open_file(), nano.c:main(), 
	  search.c:findnextstr(), winio.c:statusbar() and 
	  do_cursorpos() (David Benbennick).
	- Fix nano crashing when searching/replacing an invalid
	  regex (try "^*").  Changed regexp_init() to return 
	  1 or 0 based on regcomp()'s return value and search_init 
	  to exit with an error message (sorry Jordi!).  Added 
	  another check when using last_search instead of answer.
	- Move regcomp into rcfile.c rather than each display refresh
	  of winio.c.  New function rcfile.c:nregcomp().
	  This fixes much of nano's resource hogging behavior