@@ -144,45 +144,9 @@ Ignored, for compatibility with Pico.
 
 .SH INITIALIZATION FILE
 \fBnano\fP will read initialization files in the following 
-order: $SYSCONFDIR/nanorc, then ~/.nanorc.  Please see the example 
-file \fBnanorc.sample\fP which should be provided with \fBnano\fP.
-All lines beginning with a hash symbol (
-#
-) are considered comments 
-and will be ignored.  The following commands are understood in the 
-initialization file:
-.TP
-.B [un]set \fIoption\fP [\fIvalue\fP]
-Set (or unset) the flag \fIoption\fP.  Any long option listed above can 
-be set or unset by removing the leading dashes (e.g. "set nowrap").  If 
-the option takes an argument it will be set to \fIvalue\fP.
-.PP
-\fBCOLOR SYNTAX HIGHLIGHTING\fP (if supported by your curses library)
-.PP
-.TP
-.B syntax "\fIstr\fP" ["\fIfileregex\fP" ... ]
-Defines a syntax named \fIstr\fP which can be activated via the 
-\fB-Y\fP flag, or will be automatically activated if the current 
-filename matches \fIfileregex\fP.  All following \fBcolor\fP statements 
-will apply to \fIsyntax\fP until a new syntax is defined.
-.TP
-.B color \fIfgcolor\fP[,\fIbgcolor\fP] "\fIregex\fP" ...
-For the currently defined syntax, display all expressions matching 
-\fIregex\fP with foreground color \fIfgcolor\fP and optional background 
-color \fIbgcolor\fP. Legal colors for foreground and background color are: 
-white, black, red, blue, green, yellow, magenta, and cyan.  You may use 
-the prefix "bright" to force a stronger color highlight.  If your 
-terminal supports transparency, not specifying a \fIbgcolor\fP tells 
-\fBnano\fP to attempt to use a transparent background.
-.TP
-.B color \fIfgcolor\fP[,\fIbgcolor\fP] start="\fIsr\fP" end="\fIer\fP"
-Display expressions which start with \fIsr\fP and end with \fIer\fP 
-with foreground color \fIfgcolor\fP and optional 
-background color \fIbgcolor\fP.  This allows syntax highlighting to span 
-multiple lines.  Note that all subsequent instances of \fIsr\fP after 
-an initial \fIsr\fP is found will be highlighted until the first 
-instance of \fIer\fP.
-\fI
+order: $SYSCONFDIR/nanorc, then ~/.nanorc.  Please see nanorc(5) and 
+the example file \fBnanorc.sample\fP which should be provided with 
+\fBnano\fP. 
 
 .SH NOTES
 \fBnano\fP will try to dump the buffer into an emergency file in some
