@@ -1,0 +1,162 @@
+Content-type: text/html
+
+<HTML><HEAD><TITLE>Manpage of NANORC</TITLE>
+</HEAD><BODY>
+<H1>NANORC</H1>
+Section: File Formats (5)<BR>Updated: February 9, 2003<BR><A HREF="#index">Index</A>
+<A HREF="http://localhost/cgi-bin/man/man2html">Return to Main Contents</A><HR>
+
+
+
+<A NAME="lbAB">&nbsp;</A>
+<H2>NAME</H2>
+
+nanorc - GNU nano's rcfile
+<A NAME="lbAC">&nbsp;</A>
+<H2>SYNOPSIS</H2>
+
+<B>/etc/nanorc</B>
+
+<B>$HOME/.nanorc</B>
+
+<BR>
+
+<A NAME="lbAD">&nbsp;</A>
+<H2>DESCRIPTION</H2>
+
+This manual page documents GNU <B>nano</B>'s rcfile.
+<P>
+
+<B>nano</B> is a small, free and friendly editor which aims to replace
+Pico, the default editor included in the non-free Pine package. Rather
+than just copying Pico's look and feel, <B>nano</B> also implements some
+missing (or disabled by default) features in Pico, such as &quot;search and
+replace&quot; and &quot;go to line number&quot;.
+<P>
+<A NAME="lbAE">&nbsp;</A>
+<H2>OPTIONS</H2>
+
+The configuration file accepts a series of &quot;set&quot; and &quot;unset&quot; commands,
+which can be used to configure nano on startup without using the
+command-line options. Additionally, the &quot;syntax&quot; and &quot;color&quot; keywords
+are used to define syntax highlighting rules for different text patterns.
+GNU nano will read one command per line.
+<P>
+Options in rcfiles take precedence over nano's defaults, and command line
+options override rcfile settings.
+<P>
+The supported commands and arguments are:
+<P>
+<DL COMPACT>
+<DT><B>set/unset autoindent</B><DD>
+Use auto-indentation.
+<DT><B>set/unset backup</B><DD>
+Create backup files in filename~.
+<DT><B>set/unset const</B><DD>
+Constantly update the cursor position.
+<DT><B>set/unset cut</B><DD>
+Use cut to end of line with ^K by default.
+<DT><B>set fill </B><I>n</I><DD>
+Set the column where lines will be wrapped at to <I>n</I>.
+<DT><B>set/unset keypad</B><DD>
+Use alternate keypad routines.
+<DT><B>set/unset multibuffer</B><DD>
+Allow inserting files into their own buffers.
+<DT><B>set/unset noconvert</B><DD>
+Don't convert files from DOS/Mac format.
+<DT><B>set/unset nofollow</B><DD>
+Don't follow symlinks when writing files.
+<DT><B>set/unset nohelp</B><DD>
+Don't display the help lists at the bottom of the screen.
+<DT><B>set/unset nowrap</B><DD>
+Don't wrap text at all.
+<DT><B>set operatingdir &quot;</B><I>directory</I>&quot;<DD>
+Set operating directory (chroots the user to <I>directory</I> and below).
+<DT><B>set/unset preserve</B><DD>
+Preserve the XON and XOFF keys (^Q and ^S).
+<DT><B>set quotestr &quot;</B><I>string</I>&quot;<DD>
+The email-quote string.  This is a &quot;regular expression&quot; if your
+system supports them, otherwise a literal string.
+Default value is set quotestr &quot;^([ 	]*[|&gt;:}#])+&quot; if you have regexps,
+otherwise set quotestr &quot;&gt; &quot;.
+<DT><B>set/unset regexp</B><DD>
+Do regular expression searches by default.
+<DT><B>set/unset smooth</B><DD>
+Use smooth scrolling by default.
+<DT><B>set speller </B><I>spellprog</I><DD>
+Use spelling checker <I>spellprog</I> instead of the default (spell).
+<DT><B>set/unset suspend</B><DD>
+Allow nano to be suspended with ^Z.
+<DT><B>set tabsize </B><I>n</I><DD>
+Use a tab size of <I>n</I> instead of the default (8); must be greater 
+than 0.
+<DT><B>set/unset tempfile</B><DD>
+Save automatically on exit, don't prompt.
+<DT><B>set/unset historylog</B><DD>
+Enable ~/.nano_history for saving and reading search/replace strings.
+<DT><B>set/unset view</B><DD>
+Disallow file modification.
+<DT><B>syntax </B><I>str</I> [<I>fileregex</I> ... ]
+
+<DD>
+Defines a syntax named <I>str</I> which can be activated via the 
+<B>-Y</B> flag, or will be automatically activated if the current 
+filename matches <I>fileregex</I>.  All following <B>color</B> statements 
+will apply to <I>syntax</I> until a new syntax is defined.
+<DT><B>color </B><I>fgcolor</I>[,<I>bgcolor</I>] <I>regex</I> ...
+
+<DD>
+For the currently defined syntax, display all expressions matching 
+<I>regex</I> with foreground color <I>fgcolor</I> and optional background 
+color <I>bgcolor</I>. Legal colors for foreground and background color are: 
+white, black, red, blue, green, yellow, magenta, and cyan.  You may use 
+the prefix &quot;bright&quot; to force a stronger color highlight.  If your 
+terminal supports transparency, not specifying a <I>bgcolor</I> tells 
+<B>nano</B> to attempt to use a transparent background.
+<DT><B>color </B><I>fgcolor</I>[,<I>bgcolor</I>] start=<I>sr</I> end=<I>er</I>
+
+<DD>
+Display expressions which start with <I>sr</I> and end with <I>er</I> 
+with foreground color <I>fgcolor</I> and optional 
+background color <I>bgcolor</I>.  This allows syntax highlighting to span 
+multiple lines.  Note that all subsequent instances of <I>sr</I> after 
+an initial <I>sr</I> is found will be highlighted until the first 
+instance of <I>er</I>.
+<I>
+<P>
+</DL>
+</I><A NAME="lbAF">&nbsp;</A>
+<H2>SEE ALSO</H2>
+
+
+<DL COMPACT>
+<DT><B><A HREF="http://localhost/cgi-bin/man/man2html?1+nano">nano</A></B>(1)<DD>
+</DL>
+<P>
+
+<I>/usr/share/doc/nano/examples/nanorc.sample</I> (or equivalent on your system)
+<A NAME="lbAG">&nbsp;</A>
+<H2>AUTHOR</H2>
+
+Chris Allegretta &lt;<A HREF="mailto:chrisa@asty.org">chrisa@asty.org</A>&gt;, et al (see AUTHORS and THANKS for
+details).
+This manual page was written by Jordi Mallach &lt;<A HREF="mailto:jordi@gnu.org">jordi@gnu.org</A>&gt;.
+<P>
+
+<HR>
+<A NAME="index">&nbsp;</A><H2>Index</H2>
+<DL>
+<DT><A HREF="#lbAB">NAME</A><DD>
+<DT><A HREF="#lbAC">SYNOPSIS</A><DD>
+<DT><A HREF="#lbAD">DESCRIPTION</A><DD>
+<DT><A HREF="#lbAE">OPTIONS</A><DD>
+<DT><A HREF="#lbAF">SEE ALSO</A><DD>
+<DT><A HREF="#lbAG">AUTHOR</A><DD>
+</DL>
+<HR>
+This document was created by
+<A HREF="http://localhost/cgi-bin/man/man2html">man2html</A>,
+using the manual pages.<BR>
+Time: 04:08:33 GMT, February 13, 2003
+</BODY>
+</HTML>
